@@ -1,4 +1,8 @@
 * Fixed unhiding panel if it becomes empty and height_when_hidden is 0.
+* Fixed invalid X protocol word size: despite of stating it 32 bit, the X
+    server uses unsigned long which is 64 bit on 64-bit architectures.
+* Adapted to use libmenu-cache >= 1.0.0 - it could show empty folders in
+    the desktop menu.
 
 0.7.1
 -------------------------------------------------------------------------
